fix: flex-wrap footer links when they do not fit in single row
PT-1916

--- a/src/domain/app/footer/footer.module.scss
+++ b/src/domain/app/footer/footer.module.scss
@@ -11,3 +11,7 @@
     width: 100% !important;
   }
 }
+
+.footerBase div[class^='FooterBase-module_links'] {
+  flex-wrap: wrap;
+}
